refactor DocumentController to remove version parameter from endpoints and improve error handling in DocumentService